--- a/metadata.yaml
+++ b/metadata.yaml
@@ -28,5 +28,6 @@ subjects:
 - !lcc 'PE'
 - !lcsh 'Readers'
 - !lcc 'TN'
+- GITenberg
 title: Diggers in the Earth
 url: http://www.gutenberg.org/ebooks/24762
